--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,102 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+@font-face {
+    font-family: 'visitor_tt2_brkregular';
+    src: url('visitor2-webfont.woff2') format('woff2'),
+         url('visitor2-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+a, a:hover {
+  color: #ffffff;
+  text-decoration: none;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "visitor_tt2_brkregular", sans-serif;
+  font-size: 18px;
+  background: #f5ab35;
+}
+
+.box {
+  padding: 1px;
+  background: #fff;
+}
+
+.box-heading {
+  color: #ffffff;
+  padding: 0 5px;
+  margin: 0;
+}
+
+.box-heading p {
+  margin: 0;
+}
+
+.plus-icon {
+  background: #3498db;
+  position: fixed;
+  top: 0;
+  left: 0;
+  font-size: 40px;
+  color: #ffffff;
+  padding: 5px;
+  text-align: center;
+  height: 70px;
+  width: 70px;
+  z-index: 2147483647;
+}
+
+.list-container {
+  background: #3498db;
+  position: fixed;
+  height: 70px;
+  top: 0;
+  left: 70px;
+  width: calc(100% - 70px);
+  color: #ffffff;
+  z-index: 2147483647;
+  display: table;
+}
+
+.list-container div {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.form-container {
+  background: #3498db;
+  position: fixed;
+  width: 100%;
+  top: 70px;
+  height: 70px;
+  z-index: 2147483647;
+  padding: 20px;
+}
+
+.form-container label {
+  color: #ffffff;
+  margin-right: 5px;
+  font-weight: normal;
+}
+
+.form-container input {
+  width: 25%;
+  margin-right: 20px;
+}
+
+.form-container input[type="submit"] {
+  width: 30%
+}
+
+.colour-changer {
+  padding: 5px;
+  cursor: pointer;
 }
