--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,13 +3,8 @@
   padding: 0;
 }
 
-@font-face {
-    font-family: 'visitor_tt2_brkregular';
-    src: url('visitor2-webfont.woff2') format('woff2'),
-         url('visitor2-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
+@import url('https://fonts.googleapis.com/css?family=Poor+Story');
+
 
 a, a:hover {
   color: #ffffff;
@@ -19,17 +14,85 @@ a, a:hover {
 body {
   margin: 0;
   padding: 0;
-  font-family: "visitor_tt2_brkregular", sans-serif;
+  font-family: "Poor Story", sans-serif;
   font-size: 18px;
   background: #f5ab35;
 }
 
 .box {
-  padding: 1px;
-  background: #fff;
+  overflow: hidden;
+  border: 1px solid #ffffff;
+  background: #ffffff;
+  position: absolute;
 }
 
-.box-heading {
+
+.box-title {
+  background: #aa0000;
+  color: #ffffff;
+  padding: 0 5px;
+  white-space: nowrap;
+}
+
+.box-img {
+  width: 100%;
+}
+
+.nonDraggableImage{
+    -webkit-user-drag: none;
+}
+
+/* .youtube {
+    background-color: #000;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+.youtube img {
+    width: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0.7;
+} */
+/* .youtube .play-button {
+    width: 90px;
+    height: 60px;
+    background-color: #333;
+    box-shadow: 0 0 30px rgba( 0,0,0,0.6 );
+    z-index: 1;
+    opacity: 0.8;
+    border-radius: 6px;
+}
+.youtube .play-button:before {
+    content: "";
+    border-style: solid;
+    border-width: 15px 0 15px 26.0px;
+    border-color: transparent transparent transparent #fff;
+}
+.youtube img,
+.youtube .play-button {
+    cursor: pointer;
+}
+.youtube img,
+.youtube iframe,
+.youtube .play-button,
+.youtube .play-button:before {
+    position: absolute;
+}
+.youtube .play-button,
+.youtube .play-button:before {
+    top: 50%;
+    left: 50%;
+    transform: translate3d( -50%, -50%, 0 );
+} */
+/* .youtube iframe {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+} */
+
+/*.box-heading {
   background: #aa0000;
   color: #ffffff;
   padding: 0 5px;
@@ -100,4 +163,4 @@ body {
 .colour-changer {
   padding: 5px;
   cursor: pointer;
-}
+} */
