--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,6 +19,14 @@ body {
   background: #f5ab35;
 }
 
+.right {
+    right: 0;
+}
+
+.left {
+    left: 0;
+}
+
 .box {
   overflow: hidden;
   border: 1px solid #ffffff;
@@ -26,12 +34,54 @@ body {
   position: absolute;
 }
 
-
 .box-title {
-  background: #aa0000;
   color: #ffffff;
   padding: 0 5px;
-  white-space: nowrap;
+}
+
+.box-edit {
+  background: #f5ab35;
+  color: #ffffff;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 1px 5px;
+  opacity: .9;
+  cursor: pointer;
+  font-size: 12px;
+}
+
+.box-body {
+  position: relative;
+}
+
+.modify-bar {
+  background: #2c3e50;
+  position: fixed;
+  top: 0;
+  width: 200px;
+  height: 100vh;
+  padding: 10px;
+  display: none;
+}
+
+.modify-bar i {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin: 0 2px;
+  border-radius: 20px;
+}
+
+.modify-bar-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: #ffffff;
+  color: #2c3e50;
+  padding: 0 5px;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .box-img {
